# cgsee

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README.md  README.txt  _configure.bat  _open-project.bat  _start-cmake-gui.bat  ak_configure.bat  ak_open-project.bat  ak_start-cmake-gui.bat  cgsee.files  cgsee.includes  configure
apps/tests/: CMakeLists.txt  tests.cpp  tests.h
libs/cli/: CMakeLists.txt  dummy.cpp  dummy.h
libs/core/: CMakeLists.txt  VertexCacheOpt.cpp  VertexCacheOpt.h  VertexCacheOptimizer.cpp  VertexCacheOptimizer.h  aabb.cpp  aabb.h  abstractStereoCamera.cpp  abstractStereoCamera.h  abstractapplication.cpp  abstractapplication.h  abstractglparent.h  abstractmodelloader.cpp  abstractmodelloader.h  abstractnavigation.cpp  abstractnavigation.h  abstractpainter.cpp  abstractpainter.h  abstractscenepainter.cpp  abstractscenepainter.h  abstractstereocamera.cpp  abstractstereocamera.h  abstracttimer.h  abstractunwrapper.h  arcballnavigation.cpp  arcballnavigation.h  assimploader.cpp  assimploader.h  assimpwrapper.cpp  assimpwrapper.h  autotimer.cpp  autotimer.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  cameraimplementation.cpp  cameraimplementation.h  chronotimer.cpp  chronotimer.h  (+74 more)
libs/core/datacore/: abstractdata.cpp  abstractdata.h  abstractdata_impl.inl  attributeiterator.h  attributeiterator_impl.inl  datablock.cpp  datablock.h  datablock_impl.inl  datablockpointer.h  datablockpointer_impl.inl  datacursor.h  registertypeshere.h  typefunctions.cpp  typefunctions.h  vertexindexlist.cpp  vertexindexlist.h  vertexindexlist_impl.inl  vertexlist.cpp  vertexlist.h  vertexlist_impl.inl
libs/core/navigation/: abstractnavigation.cpp  abstractnavigation.h  arcballnavigation.cpp  arcballnavigation.h  flightnavigation.cpp  flightnavigation.h  fpsnavigation.cpp  fpsnavigation.h  viewhistory.cpp  viewhistory.h
libs/core/painter/: abstractglparent.h  abstractlistproperty.cpp  abstractlistproperty.h  abstractpainter.cpp  abstractpainter.h  abstractpainterproperty.cpp  abstractpainterproperty.h  abstractproperty.h  abstractpropertyvisitor.cpp  abstractpropertyvisitor.h  abstractscenepainter.cpp  abstractscenepainter.h  boolproperty.cpp  boolproperty.h  floatproperty.cpp  floatproperty.h  genericlistproperty-inl.h  genericlistproperty.cpp  genericlistproperty.h  genericproperty.h  intproperty.cpp  intproperty.h  limitedproperty.h  listproperty.cpp  listproperty.h  valueproperty.h
libs/core/property/: abstractlistproperty.cpp  abstractproperty.cpp  abstractproperty.h  abstractpropertyvisitor.cpp  abstractpropertyvisitor.h  advancedlistproperty.cpp  announcer.cpp  announcer.h  genericlistproperty-inl.h  limitedproperty.h  listproperty.cpp  listproperty.h  propertylist.cpp  propertylist.h  propertyowner.cpp  propertyowner.h  valueproperty.h
libs/core/rendering/: blureffect.cpp  blureffect.h  boundingboxpass.cpp  boundingboxpass.h  coloridpass.cpp  defaultpass.cpp  defaultpass.h  effect.cpp  effect.h  lightsource.cpp  lightsource.h  normalzpass.cpp  normalzpass.h  pathtracer.cpp  pathtracer.h  rasterizer.cpp  rasterizer.h  renderingpass.cpp  renderingpass.h  rendertechnique.h  shadoweffect.cpp  shadoweffect.h  shadowmapping.cpp  shadowmapping.h  ssaoeffect.cpp  ssaoeffect.h
libs/core/scenegraph/: INodeIterator.h  ISceneVisitor.h  SceneVisitorInterface.h  absolutetransformator.cpp  absolutetransformator.h  cullingvisitor.cpp  cullingvisitor.h  defaultdrawmethod.cpp  defaultdrawmethod.h  drawmethod.h  drawtraverser.h  drawvisitor.cpp  drawvisitor.h  group.cpp  group.h  groupiterator.cpp  groupiterator.h  highlightingdrawmethod.cpp  highlightingdrawmethod.h  node.cpp  node.h  nodeiterator.cpp  nodeiterator.h  nulliterator.h  pathtracingbvh.cpp  pathtracingbvh.h  pathtracinggeometry.cpp  pathtracinggeometry.h  pathtracingvisitor.cpp  pathtracingvisitor.h  polygonaldrawable.cpp  polygonaldrawable.h  polygonalgeometry.cpp  polygonalgeometry.h  sceneiterator.cpp  sceneiterator.h  scenetraverser.cpp  scenetraverser.h  scenevisitorinterface.h  triangleobject.cpp  (+1 more)
source/: CMakeLists.txt  cgsee-version.h.in
source/cgsee/: CMakeLists.txt  cgsee.cpp  cgsee.h  painter.cpp  painter.h
source/core/: CMakeLists.txt
source/core/include/core/: aabb.h  abstractapplication.h  abstracteventhandler.h  abstractimageloader.h  abstractloader.h  abstractmodelloader.h  abstractstereocamera.h  abstracttimer.h  assimploader.h  autotimer.h  bufferobject.h  camera.h  cameraimplementation.h  convergentcamera.h  coordinateprovider.h  core_api.h  declspec.h  fileassociatedshader.h  framebufferobject.h  glformat.h  gpuquery.h  materialobject.h  mathmacros.h  messagehandler.h  monocamera.h  objloader.h  offaxiscamera.h  parallelcamera.h  plane.h  program.h  renderbufferobject.h  screenquad.h  shader.h  textureobject.h  timer.h  typedefs.h  viewfrustum.h
source/core/source/: aabb.cpp  aabb.h  abstractapplication.cpp  abstractapplication.h  abstractimageloader.cpp  abstractloader.cpp  abstractmodelloader.cpp  abstractstereocamera.cpp  assimploader.cpp  assimploader.h  autotimer.cpp  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  cameraimplementation.cpp  chronotimer.h  convergentCamera.cpp  coordinateprovider.cpp  fileassociatedshader.cpp  fileassociatedshader.h  framebufferobject.cpp  framebufferobject.h  geometryoptimizer.h  glformat.cpp  glformat.h  gpuquery.cpp  gpuquery.h  idpainter.cpp  idpainter.h  materialobject.cpp  mathmacros.h  messagehandler.cpp  messagehandler.h  monocamera.cpp  objloader.cpp  objloader.h  offAxisCamera.cpp  parallelCamera.cpp  parallelCamera.h  (+17 more)
source/gui/: CMakeLists.txt
source/gui/include/gui/: canvas.h  (+11 more)
source/gui/source/: canvas.cpp  canvas.h  canvasexportconfig.cpp  canvasexportconfig.h  canvasexporter.cpp  canvasimplementation.cpp  exampleproperties.cpp  fileExplorer.cpp  fileNavigator.cpp  lightwidgetbuilder.cpp  materialwidgetbuilder.cpp  propertywidgetbuilder.cpp  propertywidgetbuilder.h  qtcanvas.cpp  viewer.cpp  viewer.ui
source/tests/: CMakeLists.txt
source/tests/core-test/: CMakeLists.txt  aabb_test.cpp
(+357 files in other folders)
